# vireoSNP-rs

./: Cargo.toml  README.md  ccc_mapping.toml
benches/: speed_python.py
examples/: high_level.rs  speed_reader.rs  speed_rust.rs
src/: lib.rs
src/simulate/: mod.rs  synth_pool.rs
src/vireo_snp/: gtbarcode.rs  mod.rs  vireo.rs
src/vireo_snp/plot/: base_plot.rs  mod.rs
src/vireo_snp/utils/: base_utils.rs  bmm_model.rs  io_utils.rs  mod.rs  variant_select.rs  vcf_utils.rs  vireo_base.rs  vireo_bulk.rs  vireo_doublet.rs  vireo_model.rs  vireo_wrap.rs
tests/: real_fixtures.rs
