[package]
name = "vireosnp-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Faithful Rust translation of vireoSNP for single-cell genotype demultiplexing"
documentation = "https://docs.rs/vireosnp-rs"
readme = "README.md"
keywords = ["bioinformatics", "single-cell", "genomics", "demultiplexing", "vireo"]
categories = ["science"]
exclude = ["vireo/"]

[features]
default = []
cli = []

[lib]
name = "vireosnp_rs"
path = "src/lib.rs"

[[bin]]
name = "vireoSNP"
path = "bin/vireoSNP.rs"
required-features = ["cli"]

[[bin]]
name = "GTbarcode"
path = "bin/GTbarcode.rs"
required-features = ["cli"]

[[bin]]
name = "synth_pool"
path = "bin/synth_pool.rs"
required-features = ["cli"]

[dependencies]
ndarray = "0.15"
rand = "0.8"
statrs = "0.16"
flate2 = "1"
hdf5 = "0.8"
memchr = "2"
memmap2 = "0.9"
